fix: 뒤로가기 z-index 1로 변경

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -641,6 +641,7 @@ img#friendDefaultImg {
 }
 
 img#goBack{
+	z-index: 1;
 	cursor: pointer;
 	position:absolute;
 	bottom: 30px;
